docs-archive/apache-airflow-providers-jenkins/3.1.0/_sources/_api/airflow/providers/jenkins/sensors/jenkins/index.rst.txt
:py:mod:`airflow.providers.jenkins.sensors.jenkins`
===================================================

.. py:module:: airflow.providers.jenkins.sensors.jenkins


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.jenkins.sensors.jenkins.JenkinsBuildSensor




.. py:class:: JenkinsBuildSensor(*, jenkins_connection_id, job_name, build_number = None, **kwargs)

   Bases: :py:obj:`airflow.sensors.base.BaseSensorOperator`

   Monitor a jenkins job and pass when it is finished building. This is regardless of the build outcome.
   This sensor depend on python-jenkins library,

   :param jenkins_connection_id: The jenkins connection to use for this job
   :param job_name: The name of the job to check
   :param build_number: Build number to check - if None, the latest build will be used

   .. py:method:: poke(context)

      Function defined by the sensors while deriving this class should override.



