docs-archive/apache-airflow-providers-jenkins/4.0.2/_sources/_api/airflow/providers/jenkins/sensors/jenkins/index.rst.txt
airflow.providers.jenkins.sensors.jenkins
=========================================

.. py:module:: airflow.providers.jenkins.sensors.jenkins


Classes
-------

.. autoapisummary::

   airflow.providers.jenkins.sensors.jenkins.JenkinsBuildSensor


Module Contents
---------------

.. py:class:: JenkinsBuildSensor(*, jenkins_connection_id, job_name, build_number = None, target_states = None, **kwargs)

   Bases: :py:obj:`airflow.sensors.base.BaseSensorOperator`


   Monitor a Jenkins job and pass when it is finished building.

   This is regardless of the build outcome.

   :param jenkins_connection_id: The jenkins connection to use for this job
   :param job_name: The name of the job to check
   :param build_number: Build number to check - if None, the latest build will be used


   .. py:attribute:: job_name


   .. py:attribute:: build_number
      :value: None



   .. py:attribute:: jenkins_connection_id


   .. py:attribute:: target_states
      :value: ['SUCCESS', 'FAILED']



   .. py:method:: poke(context)

      Override when deriving this class.



